--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -9,24 +9,25 @@ composed of a Roman Pot (RP) proton spectrometer and the forward tracking
 telescopes T1 and T2. All subdetectors have trigger capability. 
 While a complete description of the TOTEM detector instrumentation 
 and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}, 
-the present article focusses on the data from the RP system, detecting 
-elastically and diffractively scattered protons with
+the present article focusses on the data from the RPs, movable beam-pipe
+insertions that approach the LHC beam very closely to detect protons with
 scattering angles of only a few $\mu$rad. 
+The RPs are organised in two stations: one on the left side of the IP 
+(LHC sector 45) and one on the right (LHC sector 56).
 Each RP station, located between 215 and 220\,m from the IP, is composed of two 
-units separated
-by a distance of about 5\,m. A unit consists of 3 RPs, two
+units: ``near'' (214\,m from the IP) and ``far'' (220\,m). 
+A unit consists of 3 RPs, two
 approaching the outgoing beam vertically and one horizontally.
 Each RP is equipped with a stack of 10 silicon
 strip detectors designed with the specific objective of
 reducing the insensitive area at the edge facing the beam
-to only a few tens of micrometers. The long lever arm
+to only a few tens of micrometers. The 5\,m long lever arm 
 between the near and the far RP units has two important
 advantages: the local track angles in the x and y projections
 perpendicular to the beam direction can be reconstructed
 with a precision of about $10\,\mu$rad, and a high trigger efficiency
 ($> 99$\%) can be achieved as the proton trigger selection
-uses all RPs independently.
+uses all RPs independently. Since elastic scattering events consist of two anti-parallel protons, the detected events can have two topologies, called diagonals: 45 bottom -- 56 top and 45 top -- 56 bottom.
 
-\todo{define: left/right arm, sector 45/56, near/far unit}
+This report will use a reference frame where $x$ denotes the horizontal axis (pointing out of the LHC ring) and $y$ the vertical axis (pointing against gravity).
 
-\todo{define: x (horizontal) and y (vertical)}
