--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -1,4 +1,27 @@
 \section{Introduction}
+%
+Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions generates a scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. 
+
+Moreover, since the interactions act simultaneously, their interference needs to be taken into account, too. 
+
+The Coulomb amplitude can be calculated from QED (e.g.~section 3.2 in \cite{block06}), using empirical electric and magnetic form factors of the proton (e.g.~\cite{puckett10}). It can be shown (e.g.~section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$. 
+
+
+Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, otherwise not directly observable in the differential cross-section. Hence the experimental sensitivity to 
+this phase, which for general nuclear amplitudes is a function of $t$, is 
+limited to the region of very small $|t|$, and in past 
+experiments (see e.g.~\cite{} from ISR onwards) 
+only the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
+equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{{\cal R A}^{\rm N} (0)}{{\cal I A}^{\rm N} (0)}$ was determined. 
+Most of the interest in $\rho$ relies in its predictive power on total 
+cross-sections at higher centre-of-mass energies via dispersion 
+relations~\cite{dremin-dispersion}. 
+
+\textbf{...WORKING...}
+
+
+\todo{why phase interesting?} \todo{introduce: coulomb-interference formula}
+
 
 \> motivation for low-$|t|$ measurement
 \>> why it is important and interesting
